--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,110 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/Submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="61dp"
+        android:layout_marginEnd="148dp"
+        android:layout_marginStart="148dp"
         android:text="Submit"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="402dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ScrollView
+        android:id="@+id/scrollView4"
+        android:layout_width="368dp"
+        android:layout_height="234dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/Submit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <CheckBox
+                android:id="@+id/Box_01"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Bloating" />
+
+            <CheckBox
+                android:id="@+id/Box_02"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Coughing" />
+
+            <CheckBox
+                android:id="@+id/Box_03"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Diarrhea" />
+
+            <CheckBox
+                android:id="@+id/Box_04"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Dizziness" />
+
+            <CheckBox
+                android:id="@+id/Box_05"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fatigue" />
+
+            <CheckBox
+                android:id="@+id/Box_06"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fever" />
+
+            <CheckBox
+                android:id="@+id/Box_07"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Headache" />
+
+            <CheckBox
+                android:id="@+id/Box_08"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Muscle Cramps" />
+
+            <CheckBox
+                android:id="@+id/Box_09"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nausea" />
+
+            <CheckBox
+                android:id="@+id/Box_10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Throat Irritation" />
+        </LinearLayout>
+    </ScrollView>
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:entries="@array/county_arrays"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="8dp" />
+
 
 </android.support.constraint.ConstraintLayout>
