--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,18 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#093153"
     tools:context=".Thanks">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="152dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginStart="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@color/blue_gray"
-        tools:layout_editor_absoluteY="122dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -27,7 +17,7 @@
         android:layout_marginTop="8dp"
 
         android:fontFamily="@font/pacifico"
-        android:text="Thank"
+        android:text="Health"
         android:textAlignment="center"
         android:textColor="@color/test"
         android:textSize="36sp"
@@ -48,7 +38,7 @@
         android:layout_marginTop="8dp"
 
         android:fontFamily="@font/pacifico"
-        android:text="You!"
+        android:text="Shine"
         android:textAlignment="center"
         android:textColor="@color/test3"
         android:textSize="36sp"
@@ -58,6 +48,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498" />
+
+    <Button
+        android:id="@+id/start_button"
+        android:layout_width="219dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="119dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="3dp"
+        android:fontFamily="@font/acme"
+        android:text="Begin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
